lists set name and set code in card details

--- a/details.html
+++ b/details.html
@@ -28,6 +28,7 @@
         <tr class="type-line"></tr>
         <tr class="oracle-text"></tr>
         <tr class="power-toughness"></tr>
+        <tr class="set-name"></tr>
       </table>
     </div>
   </div>
