--- a/random.html
+++ b/random.html
@@ -29,6 +29,7 @@
         </tr>
         <tr class="oracle-text"></tr>
         <tr class="power-toughness"></tr>
+        <tr class="set-name"></tr>
       </table>
     </div>
   </div>
