--- a/index.html
+++ b/index.html
@@ -23,23 +23,27 @@
   </header>
 
   <form autocomplete="off" id="searchForm">
-    <label for="name">Card Name:
-      <input type="text" name="name" id="nameInput" placeholder="Words can be full or partial" /></label>
 
-    <label for="type">Types:
-      <input type="text" name="type" id="typeInput" placeholder="Including super- and/or subtypes" /></label>
-    <button type="button" id="addRandomTypeBtn">+ <i class="fas fa-random"></i></button>
-    <select id="randomTypeDropdown">
-      <option value="supertypes">Supertype</option>
-      <option value="mainCardTypes">Main Card Type</option>
-      <option value="creatureTypes" selected>Creature Type</option>
-      <option value="artifactTypes">Artifact Type</option>
-      <option value="enchantmentTypes">Enchantment Type</option>
-      <option value="spellTypes">Spell Type</option>
-      <option value="planeswalkerTypes">Planeswalker Type</option>
-      <option value="battleTypes">Battle Type</option>
-      <option value="landTypes">Land Type</option>
-    </select>
+    <label for="name" class="searchField">Card Name:
+      <input type="text" name="name" id="nameInput" placeholder="Words can be full or partial" />
+    </label>
+
+
+    <label for="type" class="searchField">Types:
+      <input type="text" name="type" id="typeInput" placeholder="Including super- and/or subtypes" />
+      <button type="button" id="addRandomTypeBtn">+ <i class="fas fa-random"></i></button>
+      <select id="randomTypeDropdown">
+        <option value="supertypes">Supertype</option>
+        <option value="mainCardTypes">Main Card Type</option>
+        <option value="creatureTypes" selected>Creature Type</option>
+        <option value="artifactTypes">Artifact Type</option>
+        <option value="enchantmentTypes">Enchantment Type</option>
+        <option value="spellTypes">Spell Type</option>
+        <option value="planeswalkerTypes">Planeswalker Type</option>
+        <option value="battleTypes">Battle Type</option>
+        <option value="landTypes">Land Type</option>
+      </select>
+    </label>
     <br /><br />
 
     <fieldset id="colorsField">
@@ -78,7 +82,7 @@
     </fieldset>
     <br />
 
-    <label>Rules Text:
+    <label class="searchField">Rules Text:
       <input type="text" name="rulesText" id="rulesTextInput" placeholder='Individual words and/or "phrases in quotes"' />
       <button type="button" id="addRandomRulesBtn">+ <i class="fas fa-random"></i></button>
       <select id="randomRulesDropdown">
@@ -111,7 +115,7 @@
     </fieldset>
     <br />
 
-    <label id="setInputLabel">Sets:
+    <label id="setInputLabel" class="searchField">Sets:
       <input type="text" id="setInput" placeholder="Search for full name or set code">
       <button type="button" id="addRandomSetBtn"><i class="fas fa-random"></i></button>
       <select id="randomSetDropdown">
@@ -126,8 +130,8 @@
 
     </label>
 
-    <label>Watermark:
-      <input type="text" name="watermark" id="watermarkInput" />
+    <label class="searchField">Watermark:
+      <input type=" text" name="watermark" id="watermarkInput" />
       <button type="button" id="addRandomWatermarkBtn"><i class="fas fa-random"></i></button>
       <select id="randomWatermarkDropdown">
         <option value="faction">Faction</option>
@@ -140,7 +144,20 @@
 
     <ul id="selectedSetList"></ul>
 
-    <label>Sort results by:
+    <fieldset>
+      <legend>Options:</legend>
+      <label>
+        <input type="checkbox" name="firstPrintings" id="firstPrintingsCheckbox" />
+        First Printings Only
+      </label>
+      <label>
+        <input type="checkbox" name="includeExtras" id="includeExtrasCheckbox" />
+        Include Extras
+      </label>
+    </fieldset>
+    <br /><br />
+
+    <label class="searchField">Sort results by:
       <select id="sortDropdown">
         <option value="name">Name</option>
         <option value="type">Type</option>
@@ -154,17 +171,6 @@
       </select>
     </label>
 
-    <fieldset>
-      <legend>Options:</legend>
-      <label>
-        <input type="checkbox" name="firstPrintings" id="firstPrintingsCheckbox" />
-        First Printings Only
-      </label>
-      <label>
-        <input type="checkbox" name="includeExtras" id="includeExtrasCheckbox" />
-        Include Extras
-      </label>
-    </fieldset>
     <div class="buttonDiv">
       <button type="submit" id="allCardsBtn">All Cards</button>
       <button id="randomBtn">Randomizer!</button>
