update name of site, add copyright

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MTG Conclave - Card Searcher</title>
+  <title>Card Conclave - MTG SEARCH</title>
   <link rel="icon" href="WandIcon.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
 
 <body>
   <header>
-    <h2>MTG CONCLAVE</h2>
+    <h2>CARD CONCLAVE</h2>
   </header>
 
   <form autocomplete="off" id="searchForm">
@@ -215,6 +215,12 @@
     </div>
   </form>
   <p class="errorMessage"></p>
+
+  <footer>
+    <small>
+      <p>(c) 2025 Card Conclave. Powered by <a href="https://scryfall.com/">Scryfall</a>.</p>
+    </small>
+  </footer>
 </body>
 
 </html>
