adds art & function (tagger) search params

--- a/details.html
+++ b/details.html
@@ -36,7 +36,7 @@
   <div id="card-back">
     <div class="displayBox"></div>
   </div>
-  <div class="displayBox linkBox"></div>
+  <div class="linkBox"></div>
   <footer></footer>
 </body>
 
