--- a/index.html
+++ b/index.html
@@ -177,6 +177,24 @@
 
     </section>
 
+    <section class="row">
+      <!-- art -->
+      <div class="searchField">
+        <label for="artInput">Art / Card Concept:</label>
+        <input type="text" name="art" id="artInput" placeholder="Artist or card concept" />
+        <button type="button" id="addArtTextBtn" class="smallButton addToList"><i class="fas fa-arrow-right"></i> <i class="fas fa-list"></i></button>
+        <ul id="selectedArtList" class="selectedParamList"></ul>
+      </div>
+
+      <!-- function -->
+      <div class="searchField">
+        <label for="functionInput">Function / Card Cycle:</label>
+        <input type="text" name="function" id="functionInput" placeholder="Card function or role" />
+        <button type="button" id="addFunctionTextBtn" class="smallButton addToList"><i class="fas fa-arrow-right"></i> <i class="fas fa-list"></i></button>
+        <ul id="selectedFunctionList" class="selectedParamList"></ul>
+      </div>
+    </section>
+
     <!-- options -->
     <fieldset>
       <legend>Options:</legend>
