--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <h2>CARD CONCLAVE</h2>
   </header>
 
+  <button id="testBtn">Test</button>
+
   <form autocomplete="off" id="searchForm">
 
     <section class="row">
@@ -183,6 +185,10 @@
         <label for="artInput">Art / Card Concept:</label>
         <input type="text" name="art" id="artInput" placeholder="Artist or card concept" />
         <button type="button" id="addArtTextBtn" class="smallButton addToList"><i class="fas fa-arrow-right"></i> <i class="fas fa-list"></i></button>
+        <span class="randomControls">
+          <button type="button" id="addRandomArtBtn" class="smallButton"><i class="fas fa-random"></i></button>
+        </span>
+        <div id="artSuggestions" class="suggestions"></div>
         <ul id="selectedArtList" class="selectedParamList"></ul>
       </div>
 
@@ -191,6 +197,10 @@
         <label for="functionInput">Function / Card Cycle:</label>
         <input type="text" name="function" id="functionInput" placeholder="Card function or role" />
         <button type="button" id="addFunctionTextBtn" class="smallButton addToList"><i class="fas fa-arrow-right"></i> <i class="fas fa-list"></i></button>
+        <span class="randomControls">
+          <button type="button" id="addRandomFunctionBtn" class="smallButton"><i class="fas fa-random"></i></button>
+        </span>
+        <div id="functionSuggestions" class="suggestions"></div>
         <ul id="selectedFunctionList" class="selectedParamList"></ul>
       </div>
     </section>
